issue #147 (Weather alignment added

--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -42,7 +42,7 @@ h1 {
         bottom: 0;
         margin: 0;
         padding-top: 75px;
-    left: 35vw;
+        left: 0vw;
 }
 
 .getWeather {
